--- a/client/src/app/modules/quotation/components/quotation/quotation.component.html
+++ b/client/src/app/modules/quotation/components/quotation/quotation.component.html
@@ -218,12 +218,12 @@
           </mat-tab>
         </fieldset>
         <mat-tab label="Facturation" *ngIf="quotation && quotation.id">
-          <invoice-management [quotation]=" quotation" [editMode]="editMode"
+          <invoice-management [quotation]="quotation" [editMode]="editMode"
             (invoiceItemChange)="invoiceItemChange($event)" [instanceOfCustomerOrder]="instanceOfCustomerOrder">
           </invoice-management>
         </mat-tab>
         <mat-tab [label]="'Eléments '+(instanceOfCustomerOrder ? 'de la commande' : 'du devis')">
-          <quotation-management [quotation]="quotation" [editMode]="editMode" [isStatusOpen]="isStatusOpen"
+          <quotation-management [(quotation)]="quotation" [editMode]="editMode" [isStatusOpen]="isStatusOpen"
             [instanceOfCustomerOrder]="instanceOfCustomerOrder"
             [updateDocumentsEvent]="updateDocumentsEvent.asObservable()"></quotation-management>
         </mat-tab>
