--- a/client/src/app/modules/miscellaneous/components/forms/generic-autocomplete/generic-autocomplete.component.html
+++ b/client/src/app/modules/miscellaneous/components/forms/generic-autocomplete/generic-autocomplete.component.html
@@ -1,7 +1,7 @@
 <mat-form-field class="full-width" [formGroup]="form!">
   <mat-label>{{label}}</mat-label>
   <input matInput [placeholder]="label" [matAutocomplete]="autoCompleteField" [formControlName]="propertyName"
-    autocomplete="do-not-autofill" [required]="isMandatory">
+    autocomplete="organization-title" [required]="isMandatory">
   <mat-icon matSuffix (click)="clearField()" *ngIf="!isDisabled && model!=undefined" class="pointer">
     close
   </mat-icon>
@@ -11,7 +11,7 @@
   </mat-icon>
   <mat-autocomplete autoActiveFirstOption panelOpen="true" #autoCompleteField="matAutocomplete"
     [displayWith]="displayLabel" (optionSelected)='optionSelected($event.option.value)'>
-    <mat-option *ngFor="let type of filteredTypes" [value]="type">
+    <mat-option *ngFor="let type of filteredTypes  " [value]="type">
       {{displayLabel(type)}}
     </mat-option>
   </mat-autocomplete>
