--- a/client/src/app/modules/quotation/components/add-affaire-dialog/add-affaire-dialog.component.html
+++ b/client/src/app/modules/quotation/components/add-affaire-dialog/add-affaire-dialog.component.html
@@ -13,7 +13,7 @@
   <mat-tab label="Créer une affaire" *ngIf="!selectedAffaire">
     <form [formGroup]="affaireForm" *ngIf="affaire">
       <div class="full-width">
-        <add-affaire [isLabelAffaire]="isLabelAffaire" [affaire]="affaire" [editMode]="true"></add-affaire>
+        <add-affaire [isLabelAffaire]="isLabelAffaire" [(affaire)]="affaire" [editMode]="true"></add-affaire>
       </div>
     </form>
   </mat-tab>
