--- a/client/src/app/modules/accounting/components/accounting-record/accounting-record.component.html
+++ b/client/src/app/modules/accounting/components/accounting-record/accounting-record.component.html
@@ -78,6 +78,7 @@
   </mat-menu>
 </button>
 <button matTooltip="Ajouter des écritures comptables" mat-fab color="accent" class="fab-button"
-  (click)=" createAccountingRecords($event)" (auxclick)=" createAccountingRecords($event)">
+  *ngIf="canAddNewAccountingRecord()" (click)=" createAccountingRecords($event)"
+  (auxclick)=" createAccountingRecords($event)">
   <mat-icon>add</mat-icon>
 </button>
