--- a/client/src/app/modules/administration/components/referentials/referential-accounting-account/referential-accounting-account.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-accounting-account/referential-accounting-account.component.html
@@ -26,6 +26,10 @@
               <generic-input [(model)]="selectedEntity.label" label="Nom fonctionnel" [maxLength]="100"
                 [form]="entityForm" propertyName="label" [isMandatory]="true" [isDisabled]="!editMode"></generic-input>
             </td>
+            <td>
+              <generic-toggle [(model)]="selectedEntity.isViewRestricted" label="Est à visibilité restreinte ?"
+                [form]="entityForm" propertyName="isViewRestricted"></generic-toggle>
+            </td>
           </tr>
         </table>
         <table class="full-width">
