--- a/client/src/app/modules/invoicing/components/payment-list/payment-list.component.html
+++ b/client/src/app/modules/invoicing/components/payment-list/payment-list.component.html
@@ -65,7 +65,7 @@
     </div>
   </div>
 </div>
-<button *ngIf="!isForDashboard " matTooltip="Importer un relevé de compte (format OFX)" mat-fab color="accent"
-  class="fab-button" (click)="importOfxFile()">
+<button *ngIf="!isForDashboard && canImportOfxFile()" matTooltip="Importer un relevé de compte (format OFX)" mat-fab
+  color="accent" class="fab-button" (click)="importOfxFile()">
   <mat-icon>upload</mat-icon>
 </button>
