--- a/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.html
+++ b/client/src/app/modules/quotation/components/invoice-management/invoice-management.component.html
@@ -87,7 +87,7 @@
                   *ngIf="editMode && invoiceItem.billingItem.billingType.canOverridePrice==true && invoiceItem.id && !invoiceItem.invoice">
                   <generic-input [(model)]="invoiceItem.preTaxPrice" label="" [form]="invoiceManagementForm"
                     [propertyName]='"preTaxPrice"+indexInvoiceItem+indexProvision+indexAsso' [isMandatory]="true"
-                    type="number" step="0,01" (onInputChange)="itemChange(invoiceItem)"
+                    type="number" step="0,01" (onFormBlur)="itemChange(invoiceItem)"
                     hint="Laisser vide pour recalculer le prix">
                   </generic-input>
                 </td>
