--- a/client/src/app/modules/quotation/components/simple-provision/simple-provision.component.html
+++ b/client/src/app/modules/quotation/components/simple-provision/simple-provision.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="simpleProvisionForm" *ngIf="simpleProvision">
   <mat-tab-group animationDuration="0ms" #tabs>
-    <mat-tab label="Formalité">
+    <mat-tab [label]="provision.provisionType.label">
       <div class="form-div">
         <table class="full-width">
           <tr>
